achieve-games/achieve-games-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: achieve-games
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: achieve-games
  template:
    metadata:
      labels:
        app: achieve-games
    spec:
      containers:
      - image: ghcr.io/dysnomia-studio/achieve-games:1.3.6
        name: achieve-games
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 200m
            memory: 4000Mi
          limits:
            cpu: 2500m
            memory: 7000Mi
      imagePullSecrets:
      - name: github
