achieve-games/achieve-games-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: achieve-games-svc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: achieve-games
