achieve-games/achieve-games-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: achieve-games-ingressroute

spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`achieve.games`) || Host(`www.achieve.games`)
    kind: Rule
    services:
    - name: achieve-games-svc
      port: 80
    middlewares:
      - name: security
  tls:
    certResolver: le
